# MFDP

./: .env.example  .gitignore  Dockerfile  EDA&compare_models.ipynb  README.md  docker-compose.yaml  kaggle_3m.dvc  pyproject.toml
.dvc/: config  config.local.example
app/: .env.example  api.py  case_browser.py  clinical_catalog.py  mask_utils.py  model_runtime.py  mri_preprocessing.py  similarity_search.py  volume_io.py
app/auth/: authenticate.py  jwt_handler.py
app/database/: config.py  database.py
app/models/: __init__.py  ml_model.py  ml_task.py  user.py
app/routes/: auth.py  cases.py  home.py  predict.py
app/services/auth/: cookieauth.py
app/services/crud/: ml_task.py  user.py
app/services/rm/: rm.py
app/tests/: conftest.py  test_auth.py  test_case_browser.py  test_health.py  test_model_runtime.py  test_predict.py  test_predict_upload.py  test_volume_io.py
app/weights/: unet_transformer_finetuned_best.pt  unet_transformer_finetuned_best.pt.dvc
ml_worker/: main.py  segmentation_task.py
scripts/: download_dataset.py  ingest_similar_cases.py
web-proxy/: nginx.conf
webview/: app.py
