[project]
name = "mri-segmentation"
version = "0.1.0"
description = "MVP: MRI brain tumor segmentation for radiologists"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "sqlmodel>=0.0.22",
    "sqlalchemy>=2.0.36",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "psycopg[binary]>=3.2.0",
    "starlette>=0.41.0",
    "pika>=1.3.2",
    "python-multipart>=0.0.17",
    "passlib[bcrypt]>=1.7.4",
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.0.1,<4.1",
    "httpx>=0.28.0",
    "requests>=2.32.0",
    "numpy>=2.0.0",
    "Pillow>=11.0.0",
    "opencv-python-headless>=4.10.0",
    "streamlit>=1.40.0",
    "qdrant-client>=1.12.0",
    "extra-streamlit-components>=0.1.81",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "httpx>=0.28.0",
]
ml = [
    "torch>=2.5.0",
    "torchvision>=0.20.0",
    "segmentation-models-pytorch>=0.3.4",
    "timm>=1.0.0",
    "tqdm>=4.66.0",
]
data = [
    "kagglehub>=0.3.0",
]

[tool.uv]
package = false

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
torchvision = { index = "pytorch-cpu" }

[[tool.uv.index]]
url = "https://pypi.org/simple"

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.pytest.ini_options]
pythonpath = ["app"]
testpaths = ["app/tests"]
filterwarnings = [
    "ignore::DeprecationWarning",
]
